<resources>
    <string name="app_name">ttran1-FeelsBook</string>
    <string name="action_settings">Settings</string>
    <string name="love_count">Love:</string>
    <string name="joy_count">Joy:</string>
    <string name="surprise_count">Surprise:</string>
    <string name="anger_count">Anger:</string>
    <string name="sadness_count">Sadness:</string>
    <string name="fear_count">Fear:</string>

    <string name="dialog_add_emotion">Add Emotion</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_add_emotion_title">Add emotion</string>
    <string name="dialog_edit_emotion_title">Edit emotion</string>
    <string name="comment">Comment...</string>
    <string name="emotion">Emotion...</string>

    <string name="emotionTypeText">Emo Type</string>
    <string name="commentText">Comment</string>
</resources>
